feat: update compatible version to 0.16.x

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,10 +33,7 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-    files:
-      - src: 'scripts/{{ .Os }}/*'
-        dst: .
-        strip_parent: true
+    files: [none*]
 
 changelog:
   filters:
